Fixed height and alignment bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@ Created By: CodeLab - www.codelab.io
 Version: v1.1
 ================================================================*/
 
+
+@font-face {
+    font-family: antipasto;
+    src: url(fonts/Antipasto_regular.otf);
+}
+
 h1, h2, h3, h4, h5, h6, p, a{
 	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	color: rgb(88,89,91);
@@ -17,9 +23,10 @@ h1, h2, h3, h4, h5, h6, p, a{
 
 
 .fullscreen{
-	height: 105vh;
+	height: 100vh;
 	width: 100vw;
 	max-width: 100%;
+	max-height:100%;
 	position: relative;
 }
 .cheeseburger{
@@ -135,8 +142,8 @@ hr.style-two {
 .bottom-center {
 	position: absolute; 
     width:300px;
-    height:300px;
-    bottom:-25px;
+    height:230px;
+    bottom:0px;
     right:25%;
     left:50%;
     margin-left:-150px;	
@@ -146,6 +153,7 @@ hr.style-two {
 h2.white{
 	color:#fff;
 	text-align:center;
+	font-family: 'antipasto';
 }
 
 .center-icon{
@@ -158,6 +166,7 @@ h2.white{
     border-radius: 50%;
     line-height: 100px;
     vertical-align: middle;
+    padding-top:4px;
 }
 
 .center-icon:hover{
@@ -165,3 +174,4 @@ h2.white{
 	color:#1D1F20;
 
 }
+
